@@ -1,3 +1,5 @@
+2019-01-25 - gcupani - Fixed bug in the workflow controlling the addition of lines to all systems.
+2019-01-24 - gcupani - Fixed bug in the detection of doublets.
 2019-01-18 - gcupani - Fixed bug that sometimes prevented fitted Voigt parameters to be copied into the table.
 2019-01-18 - gcupani - Implemented cycles to extend the addition of lines to all systems.
 2019-01-17 - gcupani - Implemented addition of lines to systems, to improve fit.
